[package]
name = "http_request_parser"
description = "Converts raw request to struct Request with it's properties"
version = "0.1.1"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/matteac/http_request_parser"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
