[package]
name = "simple_http_parser"
description = "Converts raw http request to a Request and build Response"
version = "0.3.2"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/matteac/http_parser"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
